# poc-blockchain-p2p

./: .dockerignore  .gitignore  Cargo.toml  DDD_IMPLEMENTATION_GUIDE.md  DDD_MIGRATION_PLAN.md  Dockerfile  SOFTWARE_QUALITY_PLAN.md  clippy.toml  config.toml  demo.sh  deny.toml  deploy.sh  docker-build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-manage.sh  qa-check.sh  setup-quality.sh
.github/prompts/: README.md  api-development.prompt.md  blockchain-core.prompt.md  config-utils.prompt.md  consensus-system.prompt.md  core.prompt.md  energy-trading.prompt.md  governance-system.prompt.md  p2p-network.prompt.md  storage-system.prompt.md  testing-qa.prompt.md
.github/workflows/: ci.yml  poa-tests.yml  quality.yml
benches/: blockchain_performance.rs
config/: egat.toml  erc.toml  mea.toml  pea.toml
data/: 000008.sst  000017.sst  IDENTITY  LOG  LOG.old.1753644787701529  LOG.old.1753714792977251  LOG.old.1753714922580906  LOG.old.1753714946573558  LOG.old.1753714957492987  MANIFEST-000019
docs/: API_EXTERNAL_INTEGRATION.md  API_LIVE_TEST_RESULTS.md  BLOCKCHAIN_INFRASTRUCTURE.md  CODEBASE_DOCUMENTATION.md  COMPLETE_TECHNICAL_ARCHITECTURE.md  CONSENSUS_TECHNICAL_OVERVIEW.md  CORE_API_IMPLEMENTATION.md  DDD_ARCHITECTURE.md  DDD_DOMAIN_MODELING_WORKSHOP.md  DDD_MIGRATION_COMPLETION_REPORT.md  DDD_MIGRATION_PLAN.md  DETAILED_FILE_EXPLANATIONS.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_UPDATE_SUMMARY.md  ENERGY_TRADING_PLATFORM_SPECIFICATION.md  ENERGY_TRADING_SYSTEM.md  GCP_ARCHITECTURE_DESIGN.md  GOVERNANCE_SECURITY.md  P2P_NETWORK_INFRASTRUCTURE.md  PERFORMANCE_CONFIGURATION.md  PLATFORM_INTEGRATION_GUIDE.md  POA_CONSENSUS_MECHANISM.md  POA_CONSENSUS_PLAN.md  POA_TECHNICAL_SPEC.md  PROJECT_STATUS_UPDATE.md  README.md  SCALING_IMPLEMENTATION_GUIDE.md  SCALING_STRATEGY.md  SOURCE_CODE_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION_INDEX.md  TECHNICAL_FILE_ANALYSIS.md  TEST_SUITE_DOCUMENTATION.md  TOKEN_CREATION_GUIDE.md
iot-devices/esp32-energy-meter/: DEPLOYMENT_GUIDE.md  POC_SUMMARY.md  README.md  SETUP_GUIDE.md  TESTING_GUIDE.md  platformio.ini
iot-devices/esp32-energy-meter/include/: blockchain_client.h  config_new.h  config_old.h  energy_types.h  energy_types_old.h
iot-devices/esp32-energy-meter/src/: blockchain_client.cpp  main.cpp  main_complete.cpp
monitoring/: prometheus.yml
nginx/: nginx.conf
presentation/: blockchain_presentation.md  blockchain_slides.html  presentation_guide.md  visual_flow_diagrams.md
scripts/: pre-commit  test_bonus_tokens.sh  token_creation_examples.sh
src/: api.rs  comprehensive_energy_tests.rs  config.rs  consensus.rs  energy.rs  energy_trading_tests.rs  governance.rs  governance_tests.rs  lib.rs  main.rs  p2p.rs  p2p_network_tests.rs  poa_consensus_tests.rs  storage.rs  storage_utils_tests.rs  utils.rs
src/blockchain/: block.rs  chain.rs  mod.rs  transaction.rs
src/consensus_poa/: mod.rs  poa.rs
src/domains/: mod.rs
src/domains/energy_trading/: mod.rs  tests.rs
src/domains/energy_trading/application/: mod.rs
src/domains/energy_trading/application/commands/: cancel_energy_order.rs  mod.rs  place_energy_order.rs
src/domains/energy_trading/application/queries/: get_market_depth.rs  mod.rs
src/domains/energy_trading/domain/: mod.rs  value_objects.rs
src/domains/governance/: mod.rs
src/domains/governance/application/: mod.rs
src/domains/governance/domain/: mod.rs  value_objects.rs
src/domains/governance/infrastructure/: mod.rs
src/scaling/: mod.rs  mod_backup.rs  sharding.rs  sharding_complex.rs
src/shared/: mod.rs
src/shared/application/: command_bus.rs  event_bus.rs  mod.rs  query_bus.rs
src/shared/domain/: errors.rs  events.rs  mod.rs  repository.rs  value_objects.rs
src/shared/infrastructure/: logging.rs  mod.rs  network.rs  storage.rs
terraform/: README.md  container_instances.tf  database.tf  main.tf  monitoring.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: integration_scaling_test.rs  performance_test.rs
(+16 files in other folders)
