[package]
name = "gridtokenx-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["GridTokenX Team"]
description = "Blockchain-based peer-to-peer energy trading platform for Thailand's electricity market"
license = "MIT"
repository = "https://github.com/gridtokenx/blockchain"

[lib]
name = "gridtokenx_blockchain"
path = "src/lib.rs"

[dependencies]
# Blockchain core
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework for API
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }

# Database
rocksdb = "0.21"

# Cryptography
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"
hex = "0.4"
hmac = "0.12"
pbkdf2 = "0.12"

# P2P networking (simplified)
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "mdns"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.16"

# Consensus & governance
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

# Testing and performance dependencies
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "gridtokenx-node"
path = "src/main.rs"

# Performance testing binaries (disabled until dependencies are fixed)
# [[bin]]
# name = "perf_test"
# path = "src/bin/perf_test.rs"

# [[bin]]
# name = "scaling_monitor"
# path = "src/bin/scaling_monitor.rs"

[[bench]]
name = "blockchain_performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
