[package]
name = "gridtokenx-blockchain"
version = "0.1.1"
edition = "2024"
authors = ["GridTokenX Team"]
description = "Blockchain-based peer-to-peer energy trading platform for Thailand's electricity market"
license = "MIT"
repository = "https://github.com/gridtokenx/blockchain"

[lib]
name = "gridtokenx_blockchain"
path = "src/lib.rs"

[dependencies]
# Blockchain core
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Web framework for API - Using Axum
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Database - Fast Rust-native database
sled = "0.34"

# Cryptography - Updated versions
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.9"
hex = "0.4"
hmac = "0.12"
pbkdf2 = "0.12"

# P2P networking - Latest version
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "mdns", "tokio"] }
futures = "0.3"

# Utilities - Latest versions
anyhow = "1.0"
thiserror = "1.0.63"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = "1.0"

# Consensus & governance
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"

# Testing and performance dependencies - Updated versions
criterion = { version = "0.7", features = ["html_reports"] }
futures = "0.3"
crossterm = "0.29"

[[bin]]
name = "gridtokenx-node"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
